--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -123,7 +123,7 @@ html(lang='en')
 						ul
 							li
 								#list-refined-values
-								#list-categories.wgt-dropdown-toggle
+								#list-tags.wgt-dropdown-toggle
 							li
 								.wgt-search
 									.wgt-search-icon
