--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -32,7 +32,10 @@
 						a.item-project(
 							href="{{ url_for('posts.index', community_url=project.url) }}"
 							target="_blank") {{ project.name }}
-					li#item-tags {{ node.properties.tags }}
+					li#item-tags
+						| {% for tag in node.properties.tags %}
+						| {{ tag }}
+						| {% endfor %}
 					li
 						a.item-date(href="{{ url_for('posts.view', community_url=project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
 							| {{ node._created | pretty_date }}
