Search by Algolia

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -195,8 +195,18 @@
 .listing-list-info
   display: flex
   align-items: center
+  justify-content: center
 
   #list-pagination
     margin-left: auto
   #list-stats
     margin-right: auto
+
+  .list-search-provider
+    margin-left: 5px
+    margin-top: 3px
+    height: 100%
+    width: 20px
+
+    svg
+      fill: rgba($color-background-darker, .25)
