--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -49,6 +49,10 @@
       right: -12px
       opacity: 1
 
+    &.is-featured
+      &:before
+        background-color: $color-background-lighter
+
     .item-favicon img
       opacity: 1
 
@@ -62,11 +66,9 @@
       color: rgba($color-text-dark-hint, .4)
 
   &.is-featured
-    background-color: $color-background-lighter
-
     &:before
       align-items: center
-      background-color: $color-background-lighter
+      background-color: $color-background-light
       border-radius: 50%
       color: $color-danger
       content: '\e85e'
