--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -154,8 +154,10 @@ li
 				| {% endif %}
 
 				.welcome-title
-					a.title(href="{{ url_for('posts.index', community_url=project.url) }}")
-						| {{ project.name }}
+					.title
+						a(href="{{ url_for('posts.index', community_url=project.url) }}")
+							| {{ project.name }}
+						a.beta(href="/") BETA
 					.summary {{ project.summary }}
 
 					| {% if project.extension_props.dillo %}
