Fix wrong variable for community_theme_css

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -19,8 +19,8 @@ html(lang='en')
 			}
 			{% endif %}
 
-			{% if project.extension_props.dillo.community_css %}
-				{{ project.extension_props.dillo.community_css }}
+			{% if project.extension_props.dillo.community_theme_css %}
+				{{ project.extension_props.dillo.community_theme_css }}
 			{% endif %}
 		| {% endif %}
 
