Minor tweaks to item-media display

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -10,7 +10,7 @@
 
 .item-media
   align-items: center
-  background-color: $color-background-light
+  background-color: black
   border-bottom: thin solid $color-background-dark
   display: flex
   justify-content: center
