Style tags selector

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -398,14 +398,16 @@ body[data-context="post-edit"]
             color: var(--community-theme-color, $color-primary)
 
       .tags
+        padding: 10px
+
         label
           padding-bottom: 5px
-          padding-left: 0
+          padding-left: 5px
           display: block
 
         .select2-container
           background-color: $color-background-lighter
-          border-radius: 3px
+          border-radius: 5px
           box-shadow: none
 
           .select2-selection__choice
