--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -508,5 +508,8 @@ script.
 		// Focus the #content field on load
 		input_content.focus();
 
+
+		$("#tags").select2();
+
 	});
 | {% endblock footer_scripts %}
