--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -9,6 +9,8 @@
 // Not cool. It has too many Blender Cloud stuff, needs splitting.
 @import ../../../pillar/src/styles/base
 
+@import ../../../pillar/src/styles/plugins/_js_select2
+
 @import _base
 @import _item
 @import _list
