View Fullscreen: No weird overflow for images
Captain strikes again.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -92,13 +92,8 @@ a
       .item-title
         margin-right: 70px
 
-      .item-media
-        img
-          +media-xs
-            max-width: 100%
-          max-width: 105%
-
-      .item-view-header, .item-body
+      .item-body,
+      .item-view-header
         +media-xs
           background-color: $color-background-lighter
 
