Minor style tweaks

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -32,7 +32,7 @@ body[data-context='post-fullscreen']
 
 
 #col_main::-webkit-scrollbar-track
-  background-color: $color-background-dark
+  background-color: transparent
 
 #col_main::-webkit-scrollbar-thumb
   background-color: transparent
