--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -32,7 +32,9 @@
 						a.item-project(href="{{ url_for('posts.index', community_url=project.url) }}")
 							| {{ project.name }}
 					li
-						a.item-date(href="{{ url_for('posts.view', community_url=project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
+						a.item-date(
+							title="{{ node._created }}",
+							href="{{ url_for('posts.view', community_url=project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
 							| {{ node._created | pretty_date }}
 					li#item-tags
 						| {% for tag in node.properties.tags %}
