--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -157,7 +157,7 @@ li
 					.title
 						a(href="{{ url_for('posts.index', community_url=project.url) }}")
 							| {{ project.name }}
-						a.beta(href="/") BETA
+						a.beta(href="https://blender.community/c/today/sWbbbc/announcing-blender-community") BETA
 					.summary {{ project.summary }}
 
 					| {% if project.extension_props.dillo %}
