Minor style tweaks and load bold open sans font

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -88,7 +88,7 @@ body[data-context='post-fullscreen']
 
       height: auto
       margin: 0 auto
-      max-width: 780px
+      max-width: 840px
       overflow-x: initial
       position: relative
       z-index: 1
@@ -246,7 +246,7 @@ body[data-context='post-fullscreen']
     width: 100%
 
     .item-edit-tab
-      padding: 10px
+      background-color: transparent
 
     .item-edit-header
       padding: 10px 20px 20px
