--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -8,7 +8,7 @@ html(lang='en')
 			| {% if project._id != main_project._id %} — {{ main_project.name }}{% endif %}
 
 		| {% block head %}{% endblock head %}
-		link(href='//fonts.googleapis.com/css?family=Oxygen|Open+Sans', rel='stylesheet', type='text/css')
+		link(href='//fonts.googleapis.com/css?family=Oxygen|Open+Sans:400,600', rel='stylesheet', type='text/css')
 		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
 
 		| {% if project.extension_props.dillo %}
