--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -400,11 +400,17 @@ nav
         a.login
           +media-xs
             margin-right: 0
-          border: thin solid var(--community-theme-color, $color-primary)
+          background-color: $color-background-light
+          border: 2px solid $color-background
           border-radius: 3px
+          box-shadow: 1px 1px 2px rgba(black, .2)
+          font-weight: bold
           margin-right: 15px
           padding: 5px 25px
           text-decoration: none
+
+          &:hover
+            color: var(--community-theme-color, $color-primary)
 
         &.nav-notifications
           .nav-item
