--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -541,6 +541,13 @@ body[data-context="post-edit"]
 
 
 .item-body
+  +media-sm
+    font-size: 14px
+  +media-md
+    font-size: 14px
+  +media-lg
+    font-size: 16px
+
   border-bottom: thin solid $color-background-dark
   font-size: 16px
   line-height: 1.5em
